# fine-tuning-models-agentic-hedge-fund

./: .gitignore  README.md  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub  pyproject.toml  requirements.txt  run_ci_checks.sh  tickers.txt
.github/workflows/: ci.yml
configs/: train.yaml
data/processed/: all_examples.jsonl  anti_hallucation_v1.jsonl  eval.jsonl  eval_anti_hallucation_v1.jsonl  eval_v2.jsonl  train.jsonl  train_anti_hallucation_v1.jsonl  train_v2.jsonl
data/raw/: AAPL.json  AMD.json  AMZN.json  AVGO.json  COIN.json  GOOGL.json  META.json  MSFT.json  NFLX.json  NVDA.json
eval_prompts/: prompt_1_growth_nvda.txt  prompt_2_margin_adbe.txt  prompt_3_value_risk_intc.txt  prompt_4_conflicted_tsla.txt  prompt_5_low_confidence_smallcap.txt
eval_results/: eval_rubric.md  prompt_5_low_confidence_smallcap.txt
eval_results/v1/: error_log.md  eval_rubric.md  ideal_corrected_outputs.md
eval_results/v1/outputs/: prompt_1_growth_nvda.txt  prompt_2_margin_adbe.txt  prompt_3_value_risk_intc.txt  prompt_4_conflicted_tsla.txt
inference/: compare.py  inference_test.py
scripts/: build_jsonl.py  evaluate_reranker.py  fetch_ticker_data.py  train_reranker.py  train_reranker_unsloth.py  validate_jsonl.py
smoke_test_running/: test_torch.py
tests/: test_build_jsonl.py  test_validate_jsonl.py
train/: qlora_train.py
unsloth_compiled_cache/: AqlmLoraLinear_peft_forward.py  AwqLoraLinear_peft_forward.py  GPTQLoraLinear_peft_forward.py  Linear4bit_peft_forward.py  Linear8bitLt_peft_forward.py  Linear_peft_forward.py  LoraParallelLinear_peft_forward.py  UnslothBCOTrainer.py  unsloth_compiled_module_siglip.py
(+39 files in other folders)
