[project]
name = "finance-reranker"
version = "0.1.0"
description = "Fine-tuning a cross-encoder reranker for financial document retrieval."
requires-python = ">=3.11"
dependencies = [
  "torch",
  "transformers",
  "datasets",
  "sentence-transformers",
  "peft",
  "pyyaml",
  "pydantic",
  "pandas",
  "numpy",
  "scikit-learn",
  "tqdm",
  "jupyter",
  "unsloth>=2026.3.17",
  "trl>=0.24.0",
  "accelerate>=1.13.0",
  "bitsandbytes>=0.49.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
